exports[`test renders with props 1`] = `
<div>
<Meta title="jimothy bob" image="http://test.com/test.jpg" />
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Right mobile={false} classes={{...}} ratioClasses={{...}} background="http://test.com/test.jpg" blur={true}>
<div className="soft one-whole">
<label htmlFor="file" className="background--fill ratio--square round two-fifths display-inline-block" style={{...}}>
<input onChange={[Function]} type="file" className="locked-ends locked-sides" style={{...}} />
</label>
<h4 className="text-light-primary soft-half-top flush-bottom">
jimothy
 
bob
</h4>
<p className="text-light-primary flush">
<em>
anderson
, 
SC
</em>
</p>
</div>
</Right>
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<h1>
test
</h1>
</Left>
</div>
`;

exports[`test says \`Profile\` if no nick name 1`] = `
<div>
<Meta title="Profile" image="http://test.com/test.jpg" />
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Right mobile={false} classes={{...}} ratioClasses={{...}} background="http://test.com/test.jpg" blur={true}>
<div className="soft one-whole">
<label htmlFor="file" className="background--fill ratio--square round two-fifths display-inline-block" style={{...}}>
<input onChange={[Function]} type="file" className="locked-ends locked-sides" style={{...}} />
</label>
<h4 className="text-light-primary soft-half-top flush-bottom">
jim
 
bob
</h4>
<p className="text-light-primary flush">
<em>
anderson
, 
SC
</em>
</p>
</div>
</Right>
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<h1>
test
</h1>
</Left>
</div>
`;

exports[`test works without a photo 1`] = `
<div>
<Meta title="jimothy bob" image={{...}} />
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Right mobile={false} classes={{...}} ratioClasses={{...}} background={{...}} blur={true}>
<div className="soft one-whole">
<label htmlFor="file" className="background--fill ratio--square round two-fifths display-inline-block" style={{...}}>
<input onChange={[Function]} type="file" className="locked-ends locked-sides" style={{...}} />
</label>
<h4 className="text-light-primary soft-half-top flush-bottom">
jimothy
 
bob
</h4>
<p className="text-light-primary flush">
<em>
anderson
, 
SC
</em>
</p>
</div>
</Right>
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<h1>
test
</h1>
</Left>
</div>
`;
